fix: sidebar can't work on mobile Fixes #12

--- a/src/theme/Navbar/Layout/styles.module.css
+++ b/src/theme/Navbar/Layout/styles.module.css
@@ -14,4 +14,5 @@
   top: var(--ifm-navbar-height);
   --tw-backdrop-blur: blur(4px);
   backdrop-filter: var(--tw-backdrop-blur) var(--tw-backdrop-brightness) var(--tw-backdrop-contrast) var(--tw-backdrop-grayscale) var(--tw-backdrop-hue-rotate) var(--tw-backdrop-invert) var(--tw-backdrop-opacity) var(--tw-backdrop-saturate) var(--tw-backdrop-sepia);
+  height: calc(100vh - var(--ifm-navbar-height));
 }
